created new input field in HTML file

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <option value="other">Other</option>
         </select>
       </fieldset>
+      <input type="text" id="other-title" placeholder="Your Job Role"></input>
 
       <fieldset class="shirt">
         <legend>T-Shirt Info</legend>
